@@ -14,12 +14,10 @@
 package org.eclipse.jetty.io;
 
 import java.nio.ByteBuffer;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Consumer;
 
 import org.eclipse.jetty.util.BufferUtil;
-import org.eclipse.jetty.util.Retainable;
 
 /**
  * <p>A pooled ByteBuffer which maintains a reference count that is
@@ -33,15 +31,15 @@ import org.eclipse.jetty.util.Retainable;
  * </ul>
  * <p>Calling {@link #release()} on a out of pool and retained instance does not re-pool it while that re-pools it on a out of pool but not retained instance.</p>
  */
-public class RetainableByteBuffer implements Retainable
+public class RetainableByteBuffer extends Retainable.ReferenceCounter
 {
     private final ByteBuffer buffer;
-    private final AtomicInteger references = new AtomicInteger();
     private final Consumer<RetainableByteBuffer> releaser;
     private final AtomicLong lastUpdate = new AtomicLong(System.nanoTime());
 
     RetainableByteBuffer(ByteBuffer buffer, Consumer<RetainableByteBuffer> releaser)
     {
+        super(0);
         this.releaser = releaser;
         this.buffer = buffer;
     }
@@ -61,61 +59,26 @@ public class RetainableByteBuffer implements Retainable
         return lastUpdate.getOpaque();
     }
 
-    /**
-     * Checks if {@link #retain()} has been called at least one more time than {@link #release()}.
-     * @return true if this buffer is retained, false otherwise.
-     */
-    public boolean isRetained()
-    {
-        return references.get() > 1;
-    }
-
     public boolean isDirect()
     {
         return buffer.isDirect();
     }
 
-    /**
-     * Increments the retained counter of this buffer. It must be done internally by
-     * the pool right after creation and after each un-pooling.
-     * The reason why this method exists on top of {@link #retain()} is to be able to
-     * have some safety checks that must know why the ref counter is being incremented.
-     */
-    void acquire()
+    protected void acquire()
     {
-        if (references.getAndUpdate(c -> c == 0 ? 1 : c) != 0)
-            throw new IllegalStateException("re-pooled while still used " + this);
+        // Overridden for visibility.
+        super.acquire();
     }
 
-    /**
-     * Increments the retained counter of this buffer.
-     */
-    @Override
-    public void retain()
-    {
-        if (references.getAndUpdate(c -> c == 0 ? 0 : c + 1) == 0)
-            throw new IllegalStateException("released " + this);
-    }
-
-    /**
-     * Decrements the retained counter of this buffer.
-     * @return true if the buffer was re-pooled, false otherwise.
-     */
     public boolean release()
     {
-        int ref = references.updateAndGet(c ->
-        {
-            if (c == 0)
-                throw new IllegalStateException("already released " + this);
-            return c - 1;
-        });
-        if (ref == 0)
+        boolean released = super.release();
+        if (released)
         {
             lastUpdate.setOpaque(System.nanoTime());
             releaser.accept(this);
-            return true;
         }
-        return false;
+        return released;
     }
 
     public int remaining()
@@ -141,6 +104,6 @@ public class RetainableByteBuffer implements Retainable
     @Override
     public String toString()
     {
-        return String.format("%s@%x{%s,r=%d}", getClass().getSimpleName(), hashCode(), BufferUtil.toDetailString(buffer), references.get());
+        return "%s[%s]".formatted(super.toString(), BufferUtil.toDetailString(buffer));
     }
 }
